# RCCS-CloudAgent

./: .gitignore  AGENTS.md  IRI_CHECKLIST.md  PORTING.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
plugins/rccs-cloud/: .mcp.json
plugins/rccs-cloud/.claude-plugin/: plugin.json
plugins/rccs-cloud/.codex-plugin/: plugin.json
plugins/rccs-cloud/skills/rccs-cloud-configuring/: SKILL.md
plugins/rccs-cloud/skills/rccs-cloud-demo/: SKILL.md
plugins/rccs-cloud/skills/rccs-cloud-monitoring-jobs/: SKILL.md
plugins/rccs-cloud/skills/rccs-cloud-reference/: SKILL.md
plugins/rccs-cloud/skills/rccs-cloud-submitting-jobs/: SKILL.md
server/: pyproject.toml  run.sh
server/cloud_mcp/: compute.py  config.py  docs_server.py  doctor.py  hpc_server.py  ingest.py  middleware.py  models.py
server/cloud_mcp/compute/: __init__.py  base.py  slurm.py
server/cloud_mcp/data/: cloud_config.json  cloud_guide.md
server/cloud_mcp/data/docs_index/: chunks.json  embeddings.npy
server/cloud_mcp/rag/: embed.py  ingest.py  store.py
server/tests/: smoke.py
