[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rccs-cloud-mcp"
version = "0.2.5"
description = "MCP servers for the RIKEN R-CCS Cloud: Slurm interaction and documentation search, built as a thin skin over hpc-agent-core."
requires-python = ">=3.10"
dependencies = [
    # Pinned to a compatible range: a future core release could change the
    # backend/config surface this plugin wires into. Current release: 0.4.0.
    "hpc-agent-core>=0.4,<0.5",
    "mcp",
]

[project.scripts]
rccs-cloud-hpc-mcp  = "cloud_mcp.hpc_server:main"
rccs-cloud-docs-mcp = "cloud_mcp.docs_server:main"
rccs-cloud-doctor   = "cloud_mcp.doctor:main"

[tool.setuptools.packages.find]
include = ["cloud_mcp*"]

[tool.setuptools.package-data]
cloud_mcp = [
    "data/*.json",
    "data/*.md",
    "data/docs_index/*",
]
